# Personal-Website

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json  tailwind.config.js  tailwind.css
data/: fun_projects.json  projects.json
enum_macros/: Cargo.toml
enum_macros/src/: lib.rs
models/: Cargo.toml
models/src/: lib.rs
pages/: base.html  blog-master.html  blurb.html  descent.html  error_blurb.html  fun_nonsense_base.html  htmx_snake.html  htmx_snake_gameboard.html  htmx_snake_loss.html  project.html  svg-macros.html  svg_macros.html  thrive.html  true-base.html  true_base.html
pages/fun-nonsense/: body.html  page.html  section-master.html
pages/fun_nonsense/: fun_nonsense_about.html  fun_nonsense_base.html  htmx_snake.html  htmx_snake_gameboard.html  page.html
pages/hello-world/: body.html  page.html
pages/hello_world/: body.html
pages/landing/: body.html  page.html
pages/landing_variants/: chat_variant.html
pages/serious-series/: body.html  page.html
pages/serious_series/: page.html
scripts/: htmx_snake.ts  main.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
scripts/htmx-snake/: htmx-snake.ts
scripts/htmx_snake/: htmx_snake.ts
scripts/landing/: landing.ts
scripts/main/: main.ts
scripts/shader-balls/: shader-balls.ts  shader_balls.ts
server/: Cargo.toml
server/src/: blurb.rs  endpoints.rs  fun_nonsense.rs  (+3 more)
static/: blurb_handling.js  fun_nonsense.js  hamburgers.min.css  htmx-snake.js  htmx_snake.js  landing.js  main.js  shader-balls.js  shader_balls.js  tailwind.css
(+25 files in other folders)
